--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "prop-types": "^15.7.2",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^16.13.1",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-animated-modal": "^1.1.1",
     "react-dom": "^16.13.1",
+    "react-flippy": "^0.1.5",
+    "react-full-page": "^0.1.11",
     "react-hot-loader": "^4.13.0",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
+    "react-step-wizard": "^5.3.5",
     "styled-components": "^5.2.0"
   },
   "scripts": {
