--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "chromosome",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "prop-types": "^15.7.2",
     "quill-image-resize-module-react": "^3.0.0",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-animated-modal": "^1.1.1",
-    "react-dom": "^16.13.1",
+    "react-color": "^2.19.3",
+    "react-dom": "^17.0.1",
     "react-flippy": "^0.1.5",
-    "react-full-page": "^0.1.11",
     "react-hot-loader": "^4.13.0",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.0",
+    "react-select": "^3.1.0",
     "react-spring": "^8.0.27",
     "react-step-wizard": "^5.3.5",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,7 +32,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
