some new pages and updates

--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
-    "react-animated-modal": "^1.1.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-flippy": "^0.1.5",
+    "react-google-login": "^5.1.22",
     "react-hot-loader": "^4.13.0",
+    "react-js-snackbar": "^1.0.4",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
     "react-spring": "^8.0.27",
     "react-step-wizard": "^5.3.5",
+    "simple-spellchecker": "^1.0.1",
     "styled-components": "^5.2.0",
     "web-vitals": "^0.2.4"
   },
