--- a/package.json
+++ b/package.json
@@ -4,27 +4,32 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.5.3",
+    "framer-motion": "^2.9.4",
     "prop-types": "^15.7.2",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^17.0.1",
-    "react-animate-on-scroll": "^2.1.5",
+    "react-bootstrap": "^1.4.0",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-flippy": "^0.1.5",
     "react-google-login": "^5.1.22",
     "react-hot-loader": "^4.13.0",
     "react-js-snackbar": "^1.0.4",
+    "react-modal": "^3.12.1",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
     "react-spring": "^8.0.27",
     "react-step-wizard": "^5.3.5",
-    "simple-spellchecker": "^1.0.1",
+    "react-sticky": "^6.0.3",
     "styled-components": "^5.2.0",
+    "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
