--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "framer-motion": "^2.9.4",
+    "jquery": "^3.5.1",
     "prop-types": "^15.7.2",
     "quill-image-resize-module-react": "^3.0.0",
     "rc-dialog": "^8.4.3",
@@ -29,8 +31,10 @@
     "react-spring": "^8.0.27",
     "react-step-wizard": "^5.3.5",
     "react-sticky": "^6.0.3",
+    "simple-react-validator": "^1.6.0",
     "styled-components": "^5.2.0",
     "typescript": "^4.0.5",
+    "typewriter-effect": "^2.17.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
